@@ -1,0 +1,10 @@
+Title: fixed automation call 'delete piggyback host'
+Level: 1
+Component: wato
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i1
+Date: 1474977036
+
+
