@@ -643,6 +643,7 @@
     * 3760 FIX: Cluster nodes can not be nodes of their own anymore
     * 3844 FIX: Fixed validation of host IPv4, IPv6 and management host address attributes...
     * 3845 FIX: Added missing validation of host attribute values to WATO Web API calls
+    * 3881 FIX: fixed automation call 'delete piggyback host'
 
     Notifications:
     * 3263 Notifications: allow users to restrict by their contact groups...
